@@ -12,18 +12,14 @@ public:
 	explicit GlobalKeyEventFilter(QObject *parent = nullptr);
 
 signals:
-	void setDockTitleBarsHidden(bool hidden);
 	void focusCanvas();
 
 protected:
 	bool eventFilter(QObject *watched, QEvent *event) override;
 
 private:
-	void updateDockTitleBarsHidden(bool hidden);
-	static bool hasTextFocus();
 	void checkCanvasFocus(QKeyEvent *event);
 
-	bool m_wasHidden;
 	long long m_lastAltPress;
 	unsigned long long m_lastAltInternalTimestamp;
 };
